--- a/style.css
+++ b/style.css
@@ -8,17 +8,17 @@ body{
 }
 
 .container{
-  width:750px;
+  width:850px;
   background:#1e293b;
-  padding:25px;
+  padding:2p8x;
   border-radius:12px;
   box-shadow:0 0 20px rgba(0,0,0,0.4);
 }
 
 input{
   width:100%;
-  padding:10px;
-  margin:8px 0;
+  padding:12px;
+  margin:10px 0;
   border:none;
   border-radius:6px;
 }
@@ -42,9 +42,9 @@ input{
 .answer.selected{background:#16a34a;}
 
 .nav-btn{
-  margin-top:15px;
+  margin-top:18px;
   width:100%;
-  padding:12px 17px;
+  padding:15px 19px;
   border:none;
   background:#22c55e;
   color:white;
@@ -56,4 +56,5 @@ input{
   margin-top:12px;
   font-weight:bold;
 }
+
 
